Fixed the attriution problem not displaying correctly on mobile

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ main {
 
 @media screen and (max-width: 576px) {
   main {
-    height: 95vh;
+    height: 85vh;
   }
 
   .container {
@@ -164,7 +164,7 @@ main {
 @media screen and (max-width: 480px) {
   main {
     width: 100%;
-    height: 95vh;
+    height: 80vh;
   }
 
   .container {
@@ -206,7 +206,7 @@ main {
 @media screen and (max-width: 320px) {
   main {
     width: 100%;
-    height: 95vh;
+    height: 80vh;
   }
 
   .container {
